<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneAuth">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="276dp"
        android:layout_height="216dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/red_drop"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register_as_a_donar"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/otp_btn"
        android:layout_width="133dp"
        android:layout_height="55dp"
        android:layout_marginBottom="80dp"
        android:text="@string/send_otp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/invisible_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="255dp"
        android:layout_height="36dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="78dp"
        android:text="@string/enter_your_mobile_number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/invisible_btn"
        android:layout_width="232dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="52dp"
        android:textAlignment="center"
        android:textColor="#16971B"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phone_number"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
        android:id="@+id/country_code"
        android:layout_width="128dp"
        android:layout_height="46dp"
        android:layout_marginStart="52dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phone_number" />


</androidx.constraintlayout.widget.ConstraintLayout>